--- a/testing_jasmine/views/index.erb
+++ b/testing_jasmine/views/index.erb
@@ -1,29 +1,69 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <link href="/css/application.css" rel="stylesheet" type="text/css">
     <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"></script>
     <script src="/javascripts/Scorer.js"></script>
     <script src="/javascripts/application.js"></script>
     <title>Bowling Game by omajul</title>
 </head>
 <body>
     <header>
-        <h1>Bowling</h1>
+        <h2>Bowling</h2>
     </header>
-    
-    <section id="select-image">
-        <div id="workspace">
-            <p id="caption"></p>
+    <br>
+    <div class="container-fluid">
+        <div class="border row">
+            <div class="col-md-11" style="background-color:#4d79ff;">
+                <h3>Playe name here</h3>
+            </div>
         </div>
-    </section>
+        <div id="dashboard" class="row bg-3 text-center">
+            <div class="col-md-1" style="background-color:white;">
+                <p>Frame 1</p>
+                <div class="row text-center">
+                    <div id="f1-b1" class="col-sm-6" style="background-color:lavender;">8</div>
+                    <div id="f1-b2" class="col-sm-6" style="background-color:lavenderblush;">/</div>    
+                </div>
+                <div>
+                    <h1 id="f1-score">10</h1>
+                </div> 
+            </div>
+        </div>
+    </div>
     
-    <footer>
+    <div class="frameboxFrameone">
+    
+    </div>
+    
+    <br>
+    <div class="row">
+        <div class="col-md-9" ><h5>Click number of Pins Knocked Down</h5>
+            <div class="btn-toolbar pinButtons" role="toolbar">
+                <button id="btn0" type="button" class="btn btn-default"  data-toggle="tooltip" data-placement="bottom" title="No pins knocked down" onclick="hS(0);" value="0" >0</button>
+                <button id="btn1" type="button" class="btn btn-default"  data-toggle="tooltip" data-placement="bottom" title="1 pin knocked down" onclick="hS(1);" value="1" >1</button>
+                <button id="btn2" type="button" class="btn btn-default"  data-toggle="tooltip" data-placement="bottom" title="2 pins knocked down" onclick="hS(2);" value="2" >2</button>
+                <button id="btn3" type="button" class="btn btn-default"  data-toggle="tooltip" data-placement="bottom" title="3 pins knocked down" onclick="hS(3);" value="3" >3</button>
+                <button id="btn4" type="button" class="btn btn-default"  data-toggle="tooltip" data-placement="bottom" title="4 pins knocked down" onclick="hS(4);" value="4" >4</button>
+                <button id="btn5" type="button" class="btn btn-default"  data-toggle="tooltip" data-placement="bottom" title="5 pins knocked down" onclick="hS(5);" value="5" >5</button>
+                <button id="btn6" type="button" class="btn btn-default"  data-toggle="tooltip" data-placement="bottom" title="6 pins knocked down" onclick="hS(6);" value="6" >6</button>
+                <button id="btn7" type="button" class="btn btn-default"  data-toggle="tooltip" data-placement="bottom" title="7 pins knocked down" onclick="hS(7);" value="7" >7</button>
+                <button id="btn8" type="button" class="btn btn-default"  data-toggle="tooltip" data-placement="bottom" title="8 pins knocked down" onclick="hS(8);" value="8" >8</button>
+                <button id="btn9" type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="9 pins knocked down" onclick="hS(9);" value="9" >9</button>
+                <button id="btn10" type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="10 pins knocked down" onclick="hS(10);" value="10" >10</button>
+            </div>
+        </div>
+    </div>
+
+    <footer class="container-fluid text-center">
         <div id="footer">
-            <a href="http://www.makersacademy.com/" target="_blank"><img src="http://assets.makersacademy.com/images/logo/ma-wordmark-red.png"></a>
+            <a href="https://www.makersacademy.com/" target="_blank"><img src="http://assets.makersacademy.com/images/logo/ma-wordmark-red.png"></a>
             <div>
               I built this with help from
-              <a href="http://www.makersacademy.com" target="_blank">Makers Academy</a>, a selective web development bootcamp in London.
+              <a href="https://www.makersacademy.com" target="_blank">Makers Academy</a>, a selective web development bootcamp in London.
             </div>
             <div>
               This page uses Google Image search, Ruby, Sinatra, Javascript, jQuery, HTML and CSS.
