Update Scorer and application javaScripts and index.erb

--- a/testing_jasmine/public/css/application.css
+++ b/testing_jasmine/public/css/application.css
@@ -33,3 +33,13 @@ footer img {
 footer div {
     margin: 10px 0;
 }
+
+#score-in-frame {
+    text-align: center;
+}
+
+#totalScore {
+    color: red;
+    position: relative;
+    font-size: 26px;
+}
