--- a/testing_jasmine/views/index.erb
+++ b/testing_jasmine/views/index.erb
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"></script>
     <script src="/javascripts/Scorer.js"></script>
+    <script src="/javascripts/Game.js"></script>
+    <script src="/javascripts/Player.js"></script>
     <script src="/javascripts/application.js"></script>
     <title>Bowling Game by omajul</title>
 </head>
