--- a/testing_jasmine/views/index.erb
+++ b/testing_jasmine/views/index.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
     <link href="/css/application.css" rel="stylesheet" type="text/css">
     <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,32 +15,30 @@
 </head>
 <body>
     <header>
-        <h2>Bowling</h2>
+        <h1 style="font-size: 50px;">Bowling</h1>
     </header>
     <br>
     
     <section id="game-area">
-        <div id="buttons" class="btn-group"></div>
-        
         <div id='scoresheet'>
-            <table id='score-table' class="table table-bordered" style="width:80%">
+            <table id='score-table' class="table table-bordered center" style="width:100%; table-layout:fixed;">
                 <thead>
                     <tr>
-                        <th colspan='6'>Frame 1</th>
-                        <th colspan='6'>Frame 2</th>
-                        <th colspan='6'>Frame 3</th>
-                        <th colspan='6'>Frame 4</th>
-                        <th colspan='6'>Frame 5</th>
-                        <th colspan='6'>Frame 6</th>
-                        <th colspan='6'>Frame 7</th>
-                        <th colspan='6'>Frame 8</th>
-                        <th colspan='6'>Frame 9</th>
-                        <th colspan='6'>Frame 10</th>
+                        <th colspan='6'>1</th>
+                        <th colspan='6'>2</th>
+                        <th colspan='6'>3</th>
+                        <th colspan='6'>4</th>
+                        <th colspan='6'>5</th>
+                        <th colspan='6'>6</th>
+                        <th colspan='6'>7</th>
+                        <th colspan='6'>8</th>
+                        <th colspan='6'>9</th>
+                        <th colspan='6'>10</th>
                         <th colspan='6'>Total</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="warning">
+                    <tr>
                         <td colspan='3'></td><td colspan='3'></td>
                         <td colspan='3'></td><td colspan='3'></td>
                         <td colspan='3'></td><td colspan='3'></td>
@@ -52,7 +51,7 @@
                         <td colspan='2'></td><td colspan='2'></td><td colspan='2'></td>
                         <td id="totalScore" rowspan="2" colspan='6'></td>
                     </tr>
-                    <tr id="score-in-frame" class="danger">
+                    <tr id="score-in-frame">
                         <td colspan='6'></td>
                         <td colspan='6'></td>
                         <td colspan='6'></td>
@@ -67,6 +66,7 @@
                 </tbody>
             </table>
         </div>
+        <div id="buttons" class="center"></div>
         <div>
             <h3>Dashboard (debugging tool)</h3>
             State: <p id="state"></p>
